# haskell-course

./: .gitignore  haskell-course.cabal  stack.yaml
Homework/Homework01/: Homework01.hs
Homework/Homework02/: Homework02.hs
Homework/Homework03/: Homework03.hs
lessons/: 01-Introduction-to-haskell.ipynb  02-Functions-Data-Types-and-Signatures.ipynb  03-Conditions-and-helper-constructions.ipynb
